--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
             <div class="cloud" onclick="showWord('40')">40</div>
         </div>    <script>
             const clouds = document.getElementsByClassName("cloud");
-            const words = ["Sunshine", "Rainbow", "Unicorn", "Flower", "Love", "Happiness", "Magic", "Peace", "Joy", "Smile", "Hope", "Kindness", "Dream", "Believe", "Wonder", "Inspire", "Explore", "Adventure", "Gratitude", "Harmony", "Blessings", "Laughter", "Growth", "Courage", "Wisdom", "Beauty", "Patience", "Passion", "Creativity", "Imagination", "Freedom", "Empathy", "Compassion", "Integrity", "Humility", "Generosity", "Perseverance", "Resilience", "Faith", "Trust", "Serenity", "Balance"];
-      
+            const words = ["Sobriety", "Healing", "Courage", "Strength", "Fellowship", "Hope", "Trust", "Empathy", "Gratitude", "Surrender", "Forgiveness", "Accountability", "Resilience", "Perseverance", "Serenity", "Patience", "Progress", "Acceptance", "Honesty", "Humility", "Authenticity", "Compassion", "Connection", "Belonging", "Commitment", "Determination", "Self-discovery", "Transformation", "Self-love", "Self-care", "Mindfulness", "Meditation", "Service", "Giving back", "Community", "Awareness", "Self-awareness", "Insight", "Reflection", "Purpose"];      
             function showWord(id) {
               const cloud = clouds[id - 1];
               const usedWords = Array.from(clouds).map(cloud => cloud.innerHTML);
