--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pink cloud topic wall</title>
-    <link rel="stylesheet" href="/workspace/topicwall/cloud.png">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
