--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 <body>
 
     <body>
+      <header>
+      <h1>The NA Pink Cloud topic wall</h1>
+      <h2>Pick a number between 1 and 40</h2>
+    </header>
         <div id="topic-wall">
             <div class="cloud" onclick="showWord('1')">1</div>
             <div class="cloud" onclick="showWord('2')">2</div>
