--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <body>
       <header>
-      <h1>The NA Pink Cloud topic wall</h1>
+      <h1>The PB4P Pink Cloud topic wall</h1>
       <h2>Pick a number between 1 and 40</h2>
     </header>
         <div id="topic-wall">
