--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="cloud" onclick="showWord('40')">40</div>
         </div>    <script>
             const clouds = document.getElementsByClassName("cloud");
-            const words = ["Sobriety", "Healing", "Courage", "Strength", "Fellowship", "Hope", "Trust", "Empathy", "Gratitude", "Surrender", "Forgiveness", "Accountability", "Resilience", "Perseverance", "Serenity", "Patience", "Progress", "Acceptance", "Honesty", "Humility", "Authenticity", "Compassion", "Connection", "Belonging", "Commitment", "Determination", "Self-discovery", "Transformation", "Self-love", "Self-care", "Mindfulness", "Meditation", "Service", "Giving back", "Community", "Awareness", "Self-awareness", "Insight", "Reflection", "Purpose"];      
+            const words = ["Staying clean", "Recovery", "Courage", "Strength", "Fellowship", "Hope", "Trust", "Empathy", "Gratitude", "Surrender", "Forgiveness", "Accountability", "Resilience", "Perseverance", "Serenity", "Patience", "Keeping it simple", "Acceptance", "Honesty", "Humility", "Authenticity", "Compassion", "Connection", "Belonging", "Commitment", "Determination", "Higher power", "Making amends", "Shame", "Self-care", "Mindfulness", "Meditation", "Service", "Giving back", "Spirituality", "Awareness", "complacency", "Stepwork", "Reflection", "Purpose"];      
             function showWord(id) {
               const cloud = clouds[id - 1];
               const usedWords = Array.from(clouds).map(cloud => cloud.innerHTML);
